# emate_ros

./: .gitignore  LICENSE  README.md
emate_mock_fusion/: CMakeLists.txt  package.xml  setup.py
emate_mock_fusion/launch/: main.launch
emate_mock_fusion/scripts/: mock_fusion_node.py
emate_mock_fusion/src/emate_mock_fusion/: __init__.py
emate_msgs/: CMakeLists.txt  Dockerfile  package.xml
emate_msgs/msg/: Balisereader.msg  CI.msg  FusionResultGlobal.msg  FusionResultTrack.msg  GnssIntf.msg  GnssPvt.msg  Imu.msg  LV95.msg  NED.msg  Speedometer.msg
